============ Version 1.3.0

2005-12-18  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 1.3.0

2005-12-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem-private.h:
	* src/totem-sidebar.c: (cb_resize), (cb_got_size),
	(on_sidebar_button_toggled): patch from Ronald Bultje
	<rbultje@ronald.bitfreak.net> to fix resizing of the sidebar
	(Closes: #324346)

2005-12-18  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/test-parser.c: (push_parser):
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_set_method),
	(totem_pl_parser_add_m3u), (parse_asx_entry), (parse_asx_entries),
	(parse_smil_entry), (parse_smil_entries),
	(totem_pl_parser_add_smil), (totem_pl_parser_add_asf),
	(totem_pl_parser_parse_internal):
	Fix for remote ASX files with broken mime-type, lower-case asx header,
	return values from the sub-parsers, s/mms/mmsh/ (Closes: #323683)

2005-12-18  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	* src/Makefile.am:
	* src/plparse/Makefile.am: Fixes for builddir != srcdir.

2005-12-17  Bastien Nocera  <hadess@hadess.net>

	* data/popup.glade: add an image to the play/pause popup menu item,
	remove duplicate "u" accesskey

2005-12-17  Bastien Nocera  <hadess@hadess.net>

	* data/popup.glade: Remove keyboard shortcuts from the popup menu
	(Closes: #323855)

2005-12-17  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_got_metadata_event): Fix the fullscreen name
	label not getting set (Closes: #324235)

2005-12-15  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	* src/backend/gstscreenshot.c:
	  Make screenshot code use 'totem' debug category as well.

2005-12-15  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.in:
	  Bump requirements for GStreamer 0.10 backend to current CVS.

	* src/backend/bacon-video-widget-gst-0.10.c: (got_time_tick),
	(bvw_error_from_gst_error),
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_get_video_property),