@@ -1,3 +1,11 @@
+2005-12-18  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-uri.c: (totem_setup_file_filters),
+	(totem_destroy_file_filters), (totem_add_files):
+	* src/totem-uri.h:
+	* src/totem.c: (totem_action_exit): Fix crash when calling the "add
+	to playlist dialogue twice" (Closes: #324240)
+
 ============ Version 1.3.0
 
 2005-12-18  Bastien Nocera  <hadess@hadess.net>
